policies/kyverno/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-run-as-user
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Los contenedores no deben ejecutarse como root (runAsUser: 0).
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: "true"
